@@ -5,3 +5,4 @@ Version 0.1.0~dev
 	* Add support for manzanita rewrap action, closes: #4239.
 	* Fix module importation in action sub packages.
 	* Do not manage output paths in toolbox2 actions, closes: #4253.
+	* Add preexec_fn method to Command class.
